--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "async": "^3.2.0",
+    "mkdirp": "^1.0.4",
     "sharp": "^0.25.2",
     "svg-sprite": "^1.5.0"
   }
